--- a/xxkhxt/res/initConfig.properties
+++ b/xxkhxt/res/initConfig.properties
@@ -1,7 +1,7 @@
 ##系统主数据配置
 main.DBType = mysql
 driverClass = com.mysql.jdbc.Driver
-jdbcUrl = jdbc:mysql://localhost:3306/xtpt?characterEncoding=UTF-8
+jdbcUrl = jdbc:mysql://localhost:3306/xxkhxt?characterEncoding=UTF-8
 user = root
 password = root
 
